--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>다음 지도 API</title>
+    <title>나의 집 근처 디지털배움터</title>
     <link href="style.css" rel="stylesheet" />
     <script defer src="main.js"></script>
   </head>
