내 위치로 이동하는 버튼 추가

--- a/index.html
+++ b/index.html
@@ -36,5 +36,8 @@
 
     
     <div id="map"></div>
+    <p>
+      <button class='curLo' onclick="panTo()">내 위치로 이동하기</button> 
+    </p>
   </body>
 </html>
