--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </form>
       </div>
     </header>
-    <p class='caution'>* 실제교육장소가 다를 수 있으니 반드시 확인하시고 신청 바랍니다.</p>
+    <p class='caution'>* 실제교육장소가 다를 수 있으니 반드시 확인하시고 신청 바랍니다.<br>* 위치 액서스 허용 권장 - '나의 위치로 이동하기' 가능</p>
 
     
     <div id="map"></div>
