--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <div id="map"></div>
     <p>
-      <button class='curLo' onclick="panTo()">내 위치로 이동하기</button> 
+      <button class='curLo' onclick="panTo()">나의 위치로 이동하기</button> 
     </p>
   </body>
 </html>
