--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
   
 <head>
   <meta charset="utf-8" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B9R2VDB5YD"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-B9R2VDB5YD');
+  </script>
+  
 <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
