사이트 개선 요청하기

--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
   <p class='btn'>
     <button class='curLo' onclick="panTo()">나의 위치로 이동하기</button> 
   </p>
+  <p class='btn'>
+    <button class='kko' onclick="window.open('http://pf.kakao.com/_nUmVG/chat');">사이트 개선 요청하기</button>
+  </p>
+
     <br><br>
 </body>
 
